@@ -3,25 +3,30 @@ package jadx.core.utils.files;
 import java.io.BufferedInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.Closeable;
+import java.io.DataOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.FileVisitOption;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
 import java.nio.file.attribute.BasicFileAttributes;
+import java.nio.file.attribute.FileTime;
 import java.security.MessageDigest;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 import java.util.jar.JarEntry;
 import java.util.jar.JarOutputStream;
 import java.util.stream.Collectors;
@@ -32,6 +37,8 @@ import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import jadx.core.plugins.files.IJadxFilesGetter;
+import jadx.core.utils.ListUtils;
 import jadx.core.utils.exceptions.JadxRuntimeException;
 
 public class FileUtils {
@@ -43,7 +50,32 @@ public class FileUtils {
 	public static final String JADX_TMP_INSTANCE_PREFIX = "jadx-instance-";
 	public static final String JADX_TMP_PREFIX = "jadx-tmp-";
 
+	private static Path tempRootDir = createTempRootDir();
+
 	private FileUtils() {
+		// utility class
+	}
+
+	public static synchronized Path updateTempRootDir(Path newTempRootDir) {
+		try {
+			makeDirs(newTempRootDir);
+			Path dir = Files.createTempDirectory(newTempRootDir, JADX_TMP_INSTANCE_PREFIX);
+			tempRootDir = dir;
+			dir.toFile().deleteOnExit();
+			return dir;
+		} catch (Exception e) {
+			throw new JadxRuntimeException("Failed to update temp root directory", e);
+		}
+	}
+
+	private static Path createTempRootDir() {
+		try {
+			Path dir = Files.createTempDirectory(JADX_TMP_INSTANCE_PREFIX);
+			dir.toFile().deleteOnExit();
+			return dir;
+		} catch (Exception e) {
+			throw new JadxRuntimeException("Failed to create temp root directory", e);
+		}
 	}
 
 	public static List<Path> expandDirs(List<Path> paths) {
@@ -121,63 +153,81 @@ public class FileUtils {
 			try {
 				deleteDir(dir);
 			} catch (Exception e) {
-				LOG.error("Failed to delete dir: " + dir.toAbsolutePath(), e);
+				LOG.error("Failed to delete dir: {}", dir.toAbsolutePath(), e);
 			}
 		}
 	}
 
-	private static final SimpleFileVisitor<Path> FILE_DELETE_VISITOR = new SimpleFileVisitor<Path>() {
-		@Override
-		public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-			Files.delete(file);
-			return FileVisitResult.CONTINUE;
-		}
-
-		@Override
-		public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
-			Files.delete(dir);
-			return FileVisitResult.CONTINUE;
-		}
-	};
-
 	private static void deleteDir(Path dir) {
+		deleteDir(dir, false);
+	}
+
+	private static void deleteDir(Path dir, boolean keepRootDir) {
 		try {
-			Files.walkFileTree(dir, Collections.emptySet(), Integer.MAX_VALUE, FILE_DELETE_VISITOR);
+			List<Path> files = new ArrayList<>();
+			List<Path> directories = new ArrayList<>();
+			Files.walkFileTree(dir, Collections.emptySet(), Integer.MAX_VALUE, new SimpleFileVisitor<>() {
+				@Override
+				public @NotNull FileVisitResult visitFile(@NotNull Path file, @NotNull BasicFileAttributes attrs) {
+					files.add(file);
+					return FileVisitResult.CONTINUE;
+				}
+
+				@Override
+				public @NotNull FileVisitResult postVisitDirectory(@NotNull Path directory, IOException exc) {
+					directories.add(directory);
+					return FileVisitResult.CONTINUE;
+				}
+			});
+			// delete files in parallel
+			if (!files.isEmpty()) {
+				files.parallelStream().forEach(path -> {
+					try {
+						Files.delete(path);
+					} catch (Exception e) {
+						LOG.warn("Failed to delete file {}", path.toAbsolutePath(), e);
+					}
+				});
+			}
+			// after all files are deleted, remove empty directories
+			if (keepRootDir) {
+				// root dir always last
+				ListUtils.removeLast(directories);
+			}
+			for (Path directory : directories) {
+				try {
+					Files.delete(directory);
+				} catch (IOException e) {
+					LOG.warn("Failed to delete directory {}", directory.toAbsolutePath(), e);
+				}
+			}
 		} catch (Exception e) {
 			throw new JadxRuntimeException("Failed to delete directory " + dir, e);
 		}
 	}
 
-	private static final Path TEMP_ROOT_DIR = createTempRootDir();
-
-	private static Path createTempRootDir() {
-		try {
-			String jadxTmpDir = System.getenv("JADX_TMP_DIR");
-			Path dir;
-			if (jadxTmpDir != null) {
-				dir = Files.createTempDirectory(Paths.get(jadxTmpDir), "jadx-instance-");
-			} else {
-				dir = Files.createTempDirectory(JADX_TMP_INSTANCE_PREFIX);
-			}
-			dir.toFile().deleteOnExit();
-			return dir;
-		} catch (Exception e) {
-			throw new JadxRuntimeException("Failed to create temp root directory", e);
+	public static void clearTempRootDir() {
+		if (Files.isDirectory(tempRootDir)) {
+			clearDir(tempRootDir);
 		}
 	}
 
-	public static void deleteTempRootDir() {
-		deleteDirIfExists(TEMP_ROOT_DIR);
+	public static void clearDir(Path clearDir) {
+		try {
+			deleteDir(clearDir, true);
+		} catch (Exception e) {
+			throw new JadxRuntimeException("Failed to clear directory " + clearDir, e);
+		}
 	}
 
-	public static void clearTempRootDir() {
-		deleteDirIfExists(TEMP_ROOT_DIR);
-		makeDirs(TEMP_ROOT_DIR);
-	}
-
+	/**
+	 * Deprecated.
+	 * Migrate to {@link IJadxFilesGetter} from jadx args to get temp dir
+	 */
+	@Deprecated
 	public static Path createTempDir(String prefix) {
 		try {
-			Path dir = Files.createTempDirectory(TEMP_ROOT_DIR, prefix);
+			Path dir = Files.createTempDirectory(tempRootDir, prefix);
 			dir.toFile().deleteOnExit();
 			return dir;
 		} catch (Exception e) {
@@ -185,9 +235,14 @@ public class FileUtils {
 		}
 	}
 
+	/**
+	 * Deprecated.
+	 * Migrate to {@link IJadxFilesGetter} from jadx args to get temp dir
+	 */
+	@Deprecated
 	public static Path createTempFile(String suffix) {
 		try {
-			Path path = Files.createTempFile(TEMP_ROOT_DIR, JADX_TMP_PREFIX, suffix);
+			Path path = Files.createTempFile(tempRootDir, JADX_TMP_PREFIX, suffix);
 			path.toFile().deleteOnExit();
 			return path;
 		} catch (Exception e) {
@@ -195,11 +250,31 @@ public class FileUtils {
 		}
 	}
 
+	/**
+	 * Deprecated.
+	 * Prefer {@link IJadxFilesGetter} from jadx args to get temp dir
+	 */
+	@Deprecated
 	public static Path createTempFileNoDelete(String suffix) {
 		try {
 			return Files.createTempFile(Files.createTempDirectory("jadx-persist"), "jadx-", suffix);
 		} catch (Exception e) {
 			throw new JadxRuntimeException("Failed to create temp file with suffix: " + suffix, e);
+		}
+	}
+
+	/**
+	 * Deprecated.
+	 * Migrate to {@link IJadxFilesGetter} from jadx args to get temp dir
+	 */
+	@Deprecated
+	public static Path createTempFileNonPrefixed(String fileName) {
+		try {
+			Path path = Files.createFile(tempRootDir.resolve(fileName));
+			path.toFile().deleteOnExit();
+			return path;
+		} catch (Exception e) {
+			throw new JadxRuntimeException("Failed to create non-prefixed temp file: " + fileName, e);
 		}
 	}
 
@@ -234,12 +309,36 @@ public class FileUtils {
 
 	public static void writeFile(Path file, String data) throws IOException {
 		FileUtils.makeDirsForFile(file);
-		Files.write(file, data.getBytes(StandardCharsets.UTF_8),
+		Files.writeString(file, data, StandardCharsets.UTF_8,
 				StandardOpenOption.WRITE, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 	}
 
+	public static void writeFile(Path file, byte[] data) throws IOException {
+		FileUtils.makeDirsForFile(file);
+		Files.write(file, data, StandardOpenOption.WRITE, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+	}
+
+	public static void writeFile(Path file, InputStream is) throws IOException {
+		FileUtils.makeDirsForFile(file);
+		Files.copy(is, file, StandardCopyOption.REPLACE_EXISTING);
+	}
+
 	public static String readFile(Path textFile) throws IOException {
-		return new String(Files.readAllBytes(textFile), StandardCharsets.UTF_8);
+		return Files.readString(textFile);
+	}
+
+	public static boolean renameFile(Path sourcePath, Path targetPath) {
+		try {
+			Files.move(sourcePath, targetPath, StandardCopyOption.REPLACE_EXISTING);
+			return true;
+		} catch (NoSuchFileException e) {
+			LOG.error("File to rename not found {}", sourcePath, e);
+		} catch (FileAlreadyExistsException e) {
+			LOG.error("File with that name already exists {}", targetPath, e);
+		} catch (IOException e) {
+			LOG.error("Error renaming file {}", e.getMessage(), e);
+		}
+		return false;
 	}
 
 	@NotNull
@@ -301,20 +400,18 @@ public class FileUtils {
 		return new String(hexChars, StandardCharsets.US_ASCII);
 	}
 
+	private static final byte[] ZIP_FILE_MAGIC = { 0x50, 0x4B, 0x03, 0x04 };
+
 	public static boolean isZipFile(File file) {
 		try (InputStream is = new FileInputStream(file)) {
-			byte[] headers = new byte[4];
-			int read = is.read(headers, 0, 4);
-			if (read == headers.length) {
-				String headerString = bytesToHex(headers);
-				if (Objects.equals(headerString, "504b0304")) {
-					return true;
-				}
-			}
+			int len = ZIP_FILE_MAGIC.length;
+			byte[] headers = new byte[len];
+			int read = is.read(headers);
+			return read == len && Arrays.equals(headers, ZIP_FILE_MAGIC);
 		} catch (Exception e) {
-			LOG.error("Failed read zip file: {}", file.getAbsolutePath(), e);
+			LOG.error("Failed to read zip file: {}", file.getAbsolutePath(), e);
+			return false;
 		}
-		return false;
 	}
 
 	public static String getPathBaseName(Path file) {
@@ -341,12 +438,28 @@ public class FileUtils {
 		return Stream.of(files).map(File::toPath).collect(Collectors.toList());
 	}
 
+	public static List<Path> toPathsWithTrim(File[] files) {
+		return Stream.of(files).map(FileUtils::toPathWithTrim).collect(Collectors.toList());
+	}
+
+	public static Path toPathWithTrim(File file) {
+		return toPathWithTrim(file.getPath());
+	}
+
+	public static Path toPathWithTrim(String file) {
+		return Path.of(file.trim());
+	}
+
 	public static List<Path> fileNamesToPaths(List<String> fileNames) {
 		return fileNames.stream().map(Paths::get).collect(Collectors.toList());
 	}
 
 	public static List<File> toFiles(List<Path> paths) {
 		return paths.stream().map(Path::toFile).collect(Collectors.toList());
+	}
+
+	public static String md5Sum(String str) {
+		return md5Sum(str.getBytes(StandardCharsets.UTF_8));
 	}
 
 	public static String md5Sum(byte[] data) {
@@ -356,6 +469,26 @@ public class FileUtils {
 			return bytesToHex(md.digest());
 		} catch (Exception e) {
 			throw new JadxRuntimeException("Failed to build hash", e);
+		}
+	}
+
+	/**
+	 * Hash timestamps of input files
+	 */
+	public static String buildInputsHash(List<Path> inputPaths) {
+		try (ByteArrayOutputStream bout = new ByteArrayOutputStream();
+				DataOutputStream data = new DataOutputStream(bout)) {
+			List<Path> inputFiles = FileUtils.expandDirs(inputPaths);
+			Collections.sort(inputFiles);
+			data.write(inputPaths.size());
+			data.write(inputFiles.size());
+			for (Path inputFile : inputFiles) {
+				FileTime modifiedTime = Files.getLastModifiedTime(inputFile);
+				data.writeLong(modifiedTime.toMillis());
+			}
+			return FileUtils.md5Sum(bout.toByteArray());
+		} catch (Exception e) {
+			throw new JadxRuntimeException("Failed to build hash for inputs", e);
 		}
 	}
 }
